# atividades-vivenciais

./: .gitignore  CMakeLists.txt  README.md
activities/: CMakeLists.txt  README.md
activities/src/: m2.cpp  m4.cpp
common/: glad.c
game/: CMakeLists.txt  README.md
game/maps/: map0.txt  map1.txt  map2.txt  test0.txt  test1.txt
game/shaders/: BaseFrag.frag  BaseVert.vert
game/src/: CMakeLists.txt  main.cpp
game/src/lib/: AnimatableSprite.cpp  AnimatableSprite.hpp  CMakeLists.txt  Camera.hpp  Config.cpp  Config.hpp  Map.cpp  Map.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  VboHelper.cpp  VboHelper.hpp  World.cpp  World.hpp
game/src/lib/sprites/: AnimatableSprite.cpp  AnimatableSprite.hpp  Sprite.cpp  Sprite.hpp
game/src/shaders/: BaseShader.cpp  BaseShader.hpp  CMakeLists.txt
include/glad/: glad.h
src/: m2.cpp  m3.cpp
